--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,6 +1,5 @@
 .container {
   min-height: 100vh;
-  padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -9,7 +8,7 @@
 }
 
 .main {
-  padding: 5rem 0;
+  padding: 0 10px;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -17,56 +16,12 @@
   align-items: center;
 }
 
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
 .title {
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
-}
-
-.title,
-.description {
+  font-family: 'Montserrat', sans-serif;
   text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 .grid {
@@ -88,24 +43,40 @@
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   width: 45%;
+  min-width: 300px;
+  background-color: #fff;
 }
 
-.card:hover,
+/* .card:hover,
 .card:focus,
 .card:active {
   color: #0070f3;
   border-color: #0070f3;
+} */
+.card li {
+  list-style: none;
+  line-height: 1.5;
+  margin: 0;
+  padding: 10px 0;
+  border-top: 1px solid #ccc;
 }
-
-.card h2 {
+.card h3 {
   margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
+  text-align: center;
+  color: #68a9cf;
 }
 
 .card p {
   margin: 0;
   font-size: 1.25rem;
   line-height: 1.5;
+}
+
+.card a:hover,
+.card a:focus,
+.card a:active {
+  color: #68a9cf;
 }
 
 .logo {
@@ -118,4 +89,14 @@
     width: 100%;
     flex-direction: column;
   }
+}
+
+.seach {
+  font-size: 16px;
+  padding: 16px;
+  width: 360px;
+  margin: 0 0 10px 0;
+  border: 0.0625rem solid #ebe8e4;
+  border-radius: 1.625rem;
+  box-shadow: 0 0 0.3125rem 0 rgb(20 12 0 / 6%);
 }
