--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -17,11 +17,15 @@
 }
 
 .title {
-  margin: 0;
+  margin: 30px 0 10px 0;
   line-height: 1.15;
   font-size: 4rem;
   font-family: 'Montserrat', sans-serif;
   text-align: center;
+}
+
+.sub_title {
+  margin: 0 0 30px 0;
 }
 
 .grid {
@@ -45,6 +49,7 @@
   width: 45%;
   min-width: 300px;
   background-color: #fff;
+  box-sizing: border-box;
 }
 
 /* .card:hover,
@@ -92,9 +97,9 @@
 }
 
 .search {
-  font-size: 14px;
+  font-size: 1.1rem;
   padding: 15px 20px 15px 20px;
-  width: 360px;
+  min-width: 280px;
   margin: 0 0 10px 0;
   border: 0.0625rem solid #ebe8e4;
   border-radius: 3rem;
