--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -42,7 +42,7 @@
 
 .event_title_container {
   width: 100%;
-  margin: 0 0 20px 0;
+  margin: 10px 0 10px 0;
   padding: 0 20px;
   text-align: left;
 }
@@ -52,7 +52,7 @@
 } */
 .h1 {
   margin: 0;
-  font-size: 2.4rem;
+  font-size: 2rem;
   font-weight: normal;
 }
 
@@ -64,11 +64,14 @@
 
 .content_name {
   margin: 0;
-  font-size: 18px;
+  font-size: 1.5rem;
 }
 
 .event_date {
-  font-size: 12px;
+  width: 100%;
+  padding: 0px 20px 20px 20px;
+  text-align: left;
+  font-size: 1.4rem;
   color: #666;
 }
 
