--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -34,6 +34,7 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
+  min-width: 320px;
   max-width: 800px;
   margin-top: 3rem;
 }
@@ -47,8 +48,8 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  width: 45%;
   min-width: 300px;
+  max-width: 400px;
   background-color: #fff;
   box-sizing: border-box;
 }
@@ -65,6 +66,12 @@
   margin: 0;
   padding: 10px 0;
   border-top: 1px solid #ccc;
+  font-size: 1.4rem;
+}
+.card li a {
+  display: block;
+  height: 100%;
+  width: 100%;
 }
 .card h3 {
   margin: 0 0 1rem 0;
@@ -106,36 +113,36 @@
   border-radius: 3rem;
   box-shadow: 0 0 0.3125rem 0 rgb(20 12 0 / 6%);
 }
-.submit_search {
-  display: inline-block;
-  width: 40px;
-  height: 40px;
-  font-size: 40px;
+.search_container {
+  box-sizing: border-box;
   position: relative;
+  border: 1px solid #999;
+  display: block;
+  padding: 3px 10px;
+  border-radius: 20px;
+  height: 2.3em;
+  width: 260px;
+  height: 40px;
+  overflow: hidden;
+}
+.search_container input[type='text'] {
+  border: none;
+  height: 2em;
+}
+.search_container input[type='text']:focus {
+  outline: 0;
+}
+.search_container input[type='submit'] {
   cursor: pointer;
-  border: 0;
-  background-color: red;
-}
-.submit_search span {
+  font-family: FontAwesome;
+  font-size: 1.3em;
+  border: none;
+  background: none;
+  color: #3879d9;
   position: absolute;
-  display: block;
-  top: 50%;
-  left: 50%;
-  width: 56%;
-  height: 56%;
-  border-radius: 50%;
-  margin: -0.28em 0 0 -0.28em;
-  border: 0.12em solid #673ab7;
-}
-.submit_search span::after {
-  position: absolute;
-  display: block;
-  content: '';
-  top: 50%;
-  left: 50%;
-  width: 72%;
-  height: 36%;
-  background: #673ab7;
-  margin: 0.2em 0 0 0.14em;
-  transform: rotate(45deg);
+  width: 2.5em;
+  height: 7.5em;
+  right: 0;
+  top: -10px;
+  outline: none;
 }
