--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -67,9 +67,23 @@
   font-size: 1.5rem;
 }
 
+.event_menu_container {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  height: 24px;
+  margin: 0 20px;
+}
+.event_menu_container svg {
+  width: 20px;
+  height: 20px;
+  fill: #68a9cf;
+  cursor: pointer;
+}
 .event_date {
   width: 100%;
-  padding: 0px 20px 20px 20px;
+  margin: 0 0 0 10px;
+  padding: 0px;
   text-align: left;
   font-size: 1.4rem;
   color: #666;
@@ -292,4 +306,40 @@
   margin: 0;
   background: #fff;
   transition: all 0.3s;
+}
+.event_link_container {
+  margin: 20px;
+  width: 100%;
+  height: 30px;
+}
+
+.tag_official {
+  margin: 0;
+  width: 120px;
+  height: 30px;
+  line-height: 30px;
+  padding: 0 14px 0 10px;
+  color: #fff;
+  background-color: red;
+  font-size: 1.4rem;
+  text-align: right;
+  position: relative;
+  border-radius: 5px;
+}
+
+.tag_official span {
+  display: block;
+  content: '';
+  position: absolute;
+  top: 4px;
+  left: 10px;
+  width: 20px;
+  height: 20px;
+  color: #fff;
+  z-index: 1;
+}
+.tag_official svg {
+  width: 20px;
+  height: 20px;
+  fill: #fff;
 }
