--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -71,7 +71,7 @@
   display: flex;
   justify-content: left;
   align-items: center;
-  height: 24px;
+  height: 20px;
   margin: 0 20px;
 }
 .event_menu_container svg {
@@ -81,8 +81,7 @@
   cursor: pointer;
 }
 .event_date {
-  width: 100%;
-  margin: 0 0 0 10px;
+  margin: 0 20px 0 0;
   padding: 0px;
   text-align: left;
   font-size: 1.4rem;
@@ -150,17 +149,16 @@
   display: flex;
   flex-direction: row;
   justify-content: right;
-  width: 100%;
 }
 
 .goods_type_container {
   display: flex;
-  justify-content: left;
   align-items: center;
   font-family: sans-serif;
   font-size: 1.4rem;
   text-align: right;
-  width: auto;
+  min-width: 20px;
+  margin: 0 10px 0 10px;
 }
 
 .goods_price_container {
@@ -169,11 +167,11 @@
   align-items: center;
   font-family: sans-serif;
   text-align: right;
-  margin: 0 10px 0 10px;
+  margin: 0 10px 0 0;
   white-space: nowrap;
   font-size: 1.4rem;
-  width: 110px;
-  min-width: 110px;
+  width: 100px;
+  min-width: 100px;
 }
 
 .plus_minus_container {
@@ -311,14 +309,19 @@
   margin: 20px;
   width: 100%;
   height: 30px;
+
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  font-family: sans-serif;
+  white-space: nowrap;
 }
 
 .tag_official {
-  margin: 0;
-  width: 120px;
+  margin: 0 20px 0 0;
   height: 30px;
   line-height: 30px;
-  padding: 0 14px 0 10px;
+  padding: 0 14px 0 34px;
   color: #fff;
   background-color: red;
   font-size: 1.4rem;
@@ -336,9 +339,66 @@
   width: 20px;
   height: 20px;
   color: #fff;
-  z-index: 1;
 }
 .tag_official svg {
+  width: 20px;
+  height: 20px;
+  fill: #fff;
+}
+
+.tag_twitter {
+  margin: 0 20px 0 0;
+  height: 30px;
+  line-height: 30px;
+  padding: 0 14px 0 38px;
+  color: #fff;
+  font-size: 1.4rem;
+  text-align: right;
+  position: relative;
+  border-radius: 5px;
+  background-color: #55acee;
+}
+
+.tag_twitter span {
+  display: block;
+  content: '';
+  position: absolute;
+  top: 4px;
+  left: 10px;
+  width: 20px;
+  height: 20px;
+  color: #fff;
+}
+.tag_twitter svg {
+  width: 20px;
+  height: 20px;
+  fill: #fff;
+}
+
+.tag_line {
+  margin: 0 20px 0 0;
+  height: 30px;
+  line-height: 30px;
+  padding: 0 14px 0 38px;
+  color: #fff;
+  font-size: 1.4rem;
+  text-align: right;
+  position: relative;
+  border-radius: 5px;
+  background-color: #1dcd00;
+}
+
+.tag_line span {
+  display: block;
+  content: '';
+  position: absolute;
+  top: 4px;
+  left: 10px;
+  width: 20px;
+  height: 20px;
+  color: #fff;
+}
+.tag_line svg {
   width: 20px;
   height: 20px;
   fill: #fff;
