--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -318,7 +318,7 @@
 }
 
 .tag_official {
-  margin: 0 20px 0 0;
+  margin: 0 10px 0 0;
   height: 30px;
   line-height: 30px;
   padding: 0 14px 0 34px;
@@ -347,7 +347,7 @@
 }
 
 .tag_twitter {
-  margin: 0 20px 0 0;
+  margin: 0 10px 0 0;
   height: 30px;
   line-height: 30px;
   padding: 0 14px 0 38px;
@@ -376,7 +376,7 @@
 }
 
 .tag_line {
-  margin: 0 20px 0 0;
+  margin: 0;
   height: 30px;
   line-height: 30px;
   padding: 0 14px 0 38px;
