--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,4 +1,4 @@
-.footer {
+.footer_container {
   width: 100%;
   height: 200px;
   margin: 0;
@@ -8,4 +8,13 @@
   justify-content: center;
   align-items: center;
   background-color: #eee;
+}
+
+.footer {
+  width: 100%;
+  max-width: 850px;
+  height: 200px;
+  margin: 0;
+  background-color: red;
+  position: relative;
 }
