--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -1,7 +1,7 @@
 .total_bar_container {
   width: 100%;
   height: 40px;
-  padding: 0 20px;
+  padding: 0;
   border: 0 0 1px 0 solid #ebe8e4;
   box-shadow: 0 0 0.3125rem 0 rgb(20 12 0 / 6%);
   position: fixed;
@@ -16,9 +16,37 @@
   height: 40px;
   padding: 0 20px;
   margin: auto;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: right;
+  justify-content: right;
+  -webkit-align-items: right;
+  align-items: center;
+  transition: all 0.3s;
 }
 
+.reset {
+  min-width: 65px;
+  font-size: 14px;
+  color: #ccc;
+  line-height: 40px;
+}
+.save {
+  min-width: 65px;
+  font-size: 14px;
+  color: #ccc;
+  line-height: 40px;
+}
+
+.total_count {
+  width: 40px;
+  font-size: 14px;
+  color: #ccc;
+  line-height: 40px;
+  text-align: right;
+}
 .total {
+  width: 110px;
   line-height: 40px;
   margin: 0;
   text-align: right;
@@ -104,7 +132,7 @@
   -webkit-justify-content: right;
   justify-content: right;
   -webkit-align-items: right;
-  align-items: right;
+  align-items: center;
   transition: all 0.3s;
 }
 .goodslist_hidden {
@@ -117,7 +145,7 @@
   -webkit-justify-content: right;
   justify-content: right;
   -webkit-align-items: right;
-  align-items: right;
+  align-items: center;
   transition: all 0.3s;
   background-color: red;
   top: 0;
