--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -18,8 +18,8 @@
   margin: auto;
   display: -webkit-flex;
   display: flex;
-  -webkit-justify-content: right;
-  justify-content: right;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
   -webkit-align-items: right;
   align-items: center;
   transition: all 0.3s;
@@ -27,21 +27,59 @@
 
 .reset {
   min-width: 65px;
-  font-size: 14px;
-  color: #ccc;
+  padding: 0 10px;
+  font-size: 12x;
+  color: #fff;
   line-height: 40px;
+  position: relative;
+  text-align: right;
+  cursor: pointer;
+}
+
+.reset span {
+  display: block;
+  content: '';
+  position: absolute;
+  top: 5px;
+  left: -10px;
+  width: 20px;
+  height: 20px;
+  color: #fff;
+}
+.reset svg {
+  width: 20px;
+  height: 20px;
+  fill: #fff;
 }
 .save {
   min-width: 65px;
-  font-size: 14px;
-  color: #ccc;
+  font-size: 12px;
+  color: #fff;
   line-height: 40px;
+  position: relative;
+  text-align: right;
+  cursor: pointer;
 }
 
+.save span {
+  display: block;
+  content: '';
+  position: absolute;
+  top: 4px;
+  left: 10px;
+  width: 20px;
+  height: 20px;
+  color: #fff;
+}
+.save svg {
+  width: 20px;
+  height: 20px;
+  fill: #fff;
+}
 .total_count {
   width: 40px;
-  font-size: 14px;
-  color: #ccc;
+  font-size: 12px;
+  color: #fff;
   line-height: 40px;
   text-align: right;
 }
@@ -64,7 +102,7 @@
   max-width: 800px;
   min-width: 320px;
   margin: auto;
-  padding: 20px 0;
+  padding: 10px 0;
   background-color: #fff;
 }
 
