--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -59,6 +59,7 @@
   position: relative;
   text-align: right;
   cursor: pointer;
+  padding: 0 10px 0 0;
 }
 
 .save span {
@@ -66,7 +67,7 @@
   content: '';
   position: absolute;
   top: 5px;
-  left: 15px;
+  left: 10px;
   width: 20px;
   height: 20px;
   color: #fff;
