--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -391,10 +391,9 @@
   transition: all 0.3s;
 }
 .event_link_container {
-  margin: 20px;
   width: 100%;
+  padding: 0 20px;
   height: 30px;
-
   display: flex;
   justify-content: left;
   align-items: center;
