--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -34,6 +34,7 @@
   position: relative;
   text-align: right;
   cursor: pointer;
+  transition: all 0.3s;
 }
 
 .reset span {
@@ -44,13 +45,43 @@
   left: -10px;
   width: 20px;
   height: 20px;
-  color: #fff;
 }
 .reset svg {
   width: 20px;
   height: 20px;
   fill: #fff;
+  transition: all 0.3s;
 }
+
+.reset_off {
+  min-width: 65px;
+  padding: 0 10px;
+  font-size: 12px;
+  color: #999;
+  line-height: 40px;
+  position: relative;
+  text-align: right;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.reset_off span {
+  display: block;
+  content: '';
+  position: absolute;
+  top: 5px;
+  left: -10px;
+  width: 20px;
+  height: 20px;
+}
+
+.reset_off svg {
+  width: 20px;
+  height: 20px;
+  fill: #999;
+  transition: all 0.3s;
+}
+
 .save {
   min-width: 65px;
   font-size: 12px;
