--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -29,7 +29,7 @@
   min-width: 65px;
   padding: 0 10px;
   font-size: 12px;
-  color: #fff;
+  color: #ffd700;
   line-height: 40px;
   position: relative;
   text-align: right;
@@ -49,7 +49,7 @@
 .reset svg {
   width: 20px;
   height: 20px;
-  fill: #fff;
+  fill: #ffd700;
   transition: all 0.3s;
 }
 
@@ -85,7 +85,7 @@
 .save {
   min-width: 65px;
   font-size: 12px;
-  color: #fff;
+  color: #ffd700;
   line-height: 40px;
   position: relative;
   text-align: right;
@@ -101,13 +101,39 @@
   left: 10px;
   width: 20px;
   height: 20px;
-  color: #fff;
 }
 .save svg {
   width: 20px;
   height: 20px;
-  fill: #fff;
+  fill: #ffd700;
 }
+
+.save_off {
+  min-width: 65px;
+  font-size: 12px;
+  color: #999;
+  line-height: 40px;
+  position: relative;
+  text-align: right;
+  cursor: pointer;
+  padding: 0 10px 0 0;
+}
+
+.save_off span {
+  display: block;
+  content: '';
+  position: absolute;
+  top: 5px;
+  left: 10px;
+  width: 20px;
+  height: 20px;
+}
+.save_off svg {
+  width: 20px;
+  height: 20px;
+  fill: #999;
+}
+
 .total_count {
   width: 40px;
   font-size: 12px;
