--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -541,3 +541,31 @@
   height: 20px;
   fill: #fff;
 }
+
+.scroll_button {
+  width: 60px;
+  height: 60px;
+  border-radius: 60px;
+  background-color: #000;
+  position: fixed;
+  bottom: 30px;
+  left: 30px;
+  opacity: 0.7;
+  transition: all 0.3s;
+  visibility: visible;
+  cursor: pointer;
+}
+
+.scroll_button_hidden {
+  width: 60px;
+  height: 60px;
+  border-radius: 60px;
+  background-color: red;
+  position: fixed;
+  bottom: 30px;
+  left: 30px;
+  opacity: 0.7;
+  transition: all 0.3s;
+  /* visibility: hidden; */
+  visibility: visible;
+}
