--- a/src/styles/Button_top.module.css
+++ b/src/styles/Button_top.module.css
@@ -9,7 +9,6 @@
   margin: 0;
   border-radius: 60px;
   transition: all 0.3s;
-  visibility: hidden;
   opacity: 0;
 }
 .button_scroll_active {
@@ -24,18 +23,28 @@
   border-radius: 60px;
   opacity: 0.7;
   transition: all 0.3s;
-  visibility: visible;
   cursor: pointer;
+}
+.button_scroll_active:hover {
+  background-color: red;
 }
 
 .button_scroll_active::before {
-  left: 3px;
-  width: 4px;
-  height: 4px;
-  border-top: 1px solid #7a0;
-  border-right: 1px solid #7a0;
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
+  content: '';
+  display: inline-block;
+  position: absolute;
+  vertical-align: middle;
+  color: #fff;
+  line-height: 1;
+  top: 24px;
+  left: 26px;
+  width: 16px;
+  height: 16px;
+  border: 4px solid currentColor;
+  border-left: 0;
+  border-bottom: 0;
+  box-sizing: border-box;
+  transform: translateX(-25%) rotate(-45deg);
 }
 
 .scroll {
