--- a/src/styles/Button_top.module.css
+++ b/src/styles/Button_top.module.css
@@ -9,7 +9,7 @@
   margin: 0;
   border-radius: 60px;
   transition: all 0.3s;
-  opacity: 0;
+  /* opacity: 0; */
 }
 .button_scroll_active {
   width: 60px;
@@ -21,7 +21,7 @@
   color: #fff;
   margin: 0;
   border-radius: 60px;
-  opacity: 0.7;
+  /* opacity: 0.7; */
   transition: all 0.3s;
   cursor: pointer;
 }
