--- a/src/styles/ScrollButton.module.css
+++ b/src/styles/ScrollButton.module.css
@@ -1,1 +1,56 @@
+.button_scroll {
+  width: 60px;
+  height: 60px;
+  position: fixed;
+  left: 20px;
+  bottom: 20px;
+  background-color: #000;
+  color: #fff;
+  margin: 0;
+  border-radius: 60px;
+  transition: all 0.3s;
+  opacity: 0;
+}
+.button_scroll_active {
+  width: 60px;
+  height: 60px;
+  position: fixed;
+  left: 20px;
+  bottom: 20px;
+  background-color: #000;
+  color: #fff;
+  margin: 0;
+  border-radius: 60px;
+  opacity: 0.7;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+.button_scroll_active:hover {
+  background-color: red;
+}
 
+.button_scroll_active::before {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  vertical-align: middle;
+  color: #fff;
+  line-height: 1;
+  top: 24px;
+  left: 26px;
+  width: 16px;
+  height: 16px;
+  border: 4px solid currentColor;
+  border-left: 0;
+  border-bottom: 0;
+  box-sizing: border-box;
+  transform: translateX(-25%) rotate(-45deg);
+}
+
+.scroll {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 200px;
+}
