--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -162,7 +162,7 @@
   min-width: 320px;
   margin: auto;
   padding: 10px 0;
-  background-color: #fff;
+  background-color: #ddd;
 }
 
 .event_title_container {
