--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -13,7 +13,8 @@
 .footer {
   width: 100%;
   max-width: 850px;
-  height: 200px;
+  height: 150px;
   margin: 0;
+  padding: 40px 0 0 0;
   position: relative;
 }
