--- a/src/styles/Navber.module.css
+++ b/src/styles/Navber.module.css
@@ -17,17 +17,41 @@
   height: 60px;
   padding: 0;
   margin: auto;
-  text-align: left;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  font-family: sans-serif;
+  text-align: right;
 }
 
 .logo_container {
   margin: 0 0 0 20px;
+  min-width: 180px;
   height: 60px;
-  left: 20px;
+  text-align: left;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 .logo {
   margin: 0;
   font-size: 21px;
   line-height: 60px;
   font-family: 'Montserrat', sans-serif;
+}
+
+.login_container {
+  width: 60px;
+  font-size: 1rem;
+  height: 60px;
+  text-align: center;
+  padding: 40px 0 0 0;
+}
+
+.signup_container {
+  width: 60px;
+  font-size: 1rem;
+  height: 60px;
+  text-align: center;
+  padding: 40px 0 0 0;
 }
