--- a/src/styles/Navber.module.css
+++ b/src/styles/Navber.module.css
@@ -18,7 +18,7 @@
   padding: 0;
   margin: auto;
   display: flex;
-  justify-content: right;
+  justify-content: flex-end;
   align-items: center;
   font-family: sans-serif;
   text-align: right;
@@ -46,6 +46,23 @@
   height: 60px;
   text-align: center;
   padding: 40px 0 0 0;
+  position: relative;
+  cursor: pointer;
+}
+
+.login_container span {
+  display: block;
+  content: '';
+  position: absolute;
+  top: 5px;
+  left: 13px;
+  width: 20px;
+  height: 20px;
+}
+.login_container svg {
+  width: 30px;
+  height: 30px;
+  fill: #000;
 }
 
 .signup_container {
@@ -54,4 +71,5 @@
   height: 60px;
   text-align: center;
   padding: 40px 0 0 0;
+  cursor: pointer;
 }
