--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -138,6 +138,10 @@
   transition: all 0.3s;
   cursor: pointer;
 }
+.search:focus {
+  outline: none;
+  transition: all 0.3s;
+}
 
 .search:hover {
   filter: drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.2));
