--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -49,14 +49,14 @@
 
 .card {
   margin: 0 0 20px 0;
-  padding: 1.5rem;
+  padding: 5px 10px;
   text-align: left;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
   min-width: 300px;
-  max-width: 400px;
+  max-width: 850px;
   background-color: #fff;
   box-sizing: border-box;
   transition: all 0.3s;
