--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -213,16 +213,47 @@
   color: #666;
 }
 
-.goodslistul {
-  list-style: none;
+.goods_list_ul {
   margin: 0;
   padding: 0;
-  max-width: 800px;
-  transition: all 0.3s;
+  width: 100%;
 }
-.goodslistul li {
-  transition: all 0.3s;
+
+.goods_list_li {
+  box-sizing: border-box;
+  list-style: none;
+  margin: 0;
+  max-width: 100%;
+  transition: all 0.5s;
+  border-top: 1px #ccc solid;
+  max-height: 500px;
 }
+
+.goods_list_li_active {
+  box-sizing: border-box;
+  list-style: none;
+  margin: 0;
+  max-width: 100%;
+  transition: all 0.5s;
+  border-top: 1px #ccc solid;
+  /* max-height: 80px;
+  overflow: hidden; */
+}
+
+.goods_items_container {
+  margin: 0;
+  transition: all 0.7s;
+  max-height: 500px;
+  overflow: hidden;
+}
+
+.goods_items_container_active {
+  margin: 0;
+  max-height: 0;
+  transition: all 0.7s;
+  overflow: hidden;
+}
+
 .goodslist {
   list-style: none;
   line-height: 20px;
@@ -235,6 +266,7 @@
   -webkit-align-items: right;
   align-items: center;
   transition: all 0.3s;
+  position: relative;
 }
 .goodslist_hidden {
   list-style: none;
@@ -269,21 +301,45 @@
   border-bottom: 1px solid #ccc;
 }
 
-.goodsname {
+.goods_name {
   width: 100%;
   text-align: left;
   font-size: 1.4rem;
+  padding: 10px;
 }
 .subtotalcontainer {
   text-align: right;
   width: 100%;
+  position: relative;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+  -webkit-align-items: center;
+  align-items: center;
 }
+
+.subtotalcontainer span::before {
+  content: '';
+  width: 12px;
+  height: 12px;
+  border: 0;
+  border-top: solid 3px rgb(209, 104, 104);
+  border-right: solid 3px rgb(209, 104, 104);
+  position: absolute;
+  top: 12px;
+  left: 4px;
+  margin-top: -4px;
+  transform: rotate(-45deg);
+  cursor: pointer;
+}
+
 .subtotalcount {
   font-size: 14px;
   color: #666;
 }
 .subtotal {
-  width: 300px;
+  min-width: 120px;
   margin-left: 10px;
   margin-right: 0;
   font-size: 18px;
@@ -292,8 +348,11 @@
 
 .goods_detail_container {
   width: 100%;
+  margin: 0;
+  padding: 10px 10px 10px 0;
   display: flex;
   justify-content: flex-end;
+  transition: all 0.3s;
 }
 
 .goods_type_container {
