--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -324,11 +324,11 @@
   width: 12px;
   height: 12px;
   border: 0;
-  border-top: solid 3px rgb(209, 104, 104);
-  border-right: solid 3px rgb(209, 104, 104);
+  border-top: solid 3px #68a9cf;
+  border-right: solid 3px #68a9cf;
   position: absolute;
   top: 12px;
-  left: 4px;
+  left: 14px;
   margin-top: -4px;
   transform: rotate(-45deg);
   cursor: pointer;
