--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -254,20 +254,6 @@
   overflow: hidden;
 }
 
-.goodslist {
-  list-style: none;
-  line-height: 20px;
-  padding: 10px 10px;
-  margin: 0;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-justify-content: right;
-  justify-content: right;
-  -webkit-align-items: right;
-  align-items: center;
-  transition: all 0.3s;
-  position: relative;
-}
 .goodslist_hidden {
   list-style: none;
   line-height: 20px;
@@ -310,15 +296,24 @@
 .subtotalcontainer {
   text-align: right;
   width: 100%;
+  margin: 0;
+  height: 40px;
+  padding: 0 10px;
   position: relative;
   display: -webkit-flex;
   display: flex;
-  -webkit-justify-content: flex-end;
-  justify-content: flex-end;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
   -webkit-align-items: center;
   align-items: center;
 }
-
+.subtotalcontainer span {
+  width: 40px;
+  height: 40px;
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
 .subtotalcontainer span::before {
   content: '';
   width: 12px;
@@ -327,23 +322,44 @@
   border-top: solid 3px #68a9cf;
   border-right: solid 3px #68a9cf;
   position: absolute;
-  top: 12px;
-  left: 14px;
+  top: 20px;
+  left: 13px;
   margin-top: -4px;
   transform: rotate(-45deg);
-  cursor: pointer;
+}
+.subtotalwrap {
+  margin: 0;
+  min-width: 240px;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
 }
 
 .subtotalcount {
+  height: 40px;
   font-size: 14px;
   color: #666;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+  -webkit-align-items: center;
+  align-items: center;
 }
 .subtotal {
+  height: 40px;
   min-width: 120px;
   margin-left: 10px;
   margin-right: 0;
   font-size: 18px;
   font-family: sans-serif;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+  -webkit-align-items: center;
+  align-items: center;
 }
 
 .goods_detail_container {
