--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -1,9 +1,10 @@
 .total_bar_container {
   width: 100%;
+  max-width: 800px;
   height: 40px;
   padding: 0;
   border: 0 0 1px 0 solid #ebe8e4;
-  box-shadow: 0 0 0.3125rem 0 rgb(20 12 0 / 6%);
+  box-shadow: 0 0 0.3125rem 0 rgb(20 12 0 / 20%);
   position: fixed;
   top: 60px;
   background-color: #333;
@@ -149,12 +150,6 @@
   font-size: 20px;
   color: #fff;
   font-family: sans-serif;
-}
-
-.main_container {
-  width: 100%;
-  margin: 160px 0 40px 0;
-  text-align: center;
 }
 
 .main {
