--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,21 +1,3 @@
-.container {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-.main {
-  padding: 0 10px;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 .title {
   margin: 60px 0 10px 0;
   line-height: 1.15;
@@ -50,7 +32,7 @@
 }
 
 .card {
-  margin: 0 0 20px 0;
+  margin: 0 10px 20px 10px;
   padding: 5px 10px;
   text-align: left;
   color: inherit;
@@ -60,7 +42,6 @@
   min-width: 300px;
   max-width: 850px;
   background-color: #fff;
-  box-sizing: border-box;
   transition: all 0.3s;
 }
 
@@ -97,18 +78,13 @@
   display: block;
   height: 100%;
   width: 100%;
+  padding: 0 30px 0 0;
 }
 .card h3 {
   margin: 0 0 1rem 0;
   font-size: 1.2rem;
   text-align: center;
   color: #68a9cf;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
 }
 
 .card a:hover,
@@ -149,9 +125,12 @@
   filter: drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.2));
 }
 .search_container {
+  width: 280px;
   position: relative;
   border: 0;
   border-radius: 3rem;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
 .search_button {
