--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -69,17 +69,36 @@
   padding: 10px 0;
   border-top: 1px solid #ccc;
   font-size: 1.4rem;
+  position: relative;
+}
+
+.card li span::before {
+  content: '';
+  width: 6px;
+  height: 6px;
+  border: 0;
+  border-top: solid 3px #68a9cf;
+  border-right: solid 3px #68a9cf;
+  position: absolute;
+  top: 50%;
+  right: 14px;
+  margin-top: -4px;
+  transform: rotate(45deg);
+  transition: all 0.7s;
+  cursor: pointer;
+}
+
+.card li a {
+  display: block;
+  height: 100%;
+  width: 100%;
+  padding: 0 30px 0 10px;
 }
 
 .card li:first-child {
   border: none;
 }
-.card li a {
-  display: block;
-  height: 100%;
-  width: 100%;
-  padding: 0 30px 0 0;
-}
+
 .card h3 {
   margin: 0 0 1rem 0;
   font-size: 1.2rem;
