--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -538,8 +538,7 @@
 }
 .event_link_container {
   width: 100%;
-  padding: 20px;
-  height: 70px;
+  padding: 15px 20px 20px 20px;
   display: flex;
   justify-content: left;
   align-items: center;
@@ -578,11 +577,11 @@
 
 .tag_twitter {
   margin: 0 10px 0 0;
-  height: 30px;
-  line-height: 30px;
-  padding: 0 14px 0 38px;
+  height: 24px;
+  line-height: 24px;
+  padding: 0 10px 0 30px;
   color: #fff;
-  font-size: 1.4rem;
+  font-size: 1rem;
   text-align: right;
   position: relative;
   border-radius: 5px;
@@ -594,24 +593,24 @@
   content: '';
   position: absolute;
   top: 4px;
-  left: 10px;
+  left: 4px;
   width: 20px;
   height: 20px;
   color: #fff;
 }
 .tag_twitter svg {
-  width: 20px;
-  height: 20px;
+  width: 16px;
+  height: 16px;
   fill: #fff;
 }
 
 .tag_line {
   margin: 0;
-  height: 30px;
-  line-height: 30px;
-  padding: 0 14px 0 38px;
+  height: 24px;
+  line-height: 24px;
+  padding: 0 10px 0 30px;
   color: #fff;
-  font-size: 1.4rem;
+  font-size: 1rem;
   text-align: right;
   position: relative;
   border-radius: 5px;
@@ -622,15 +621,15 @@
   display: block;
   content: '';
   position: absolute;
-  top: 4px;
-  left: 10px;
+  top: 3px;
+  left: 3px;
   width: 20px;
   height: 20px;
   color: #fff;
 }
 .tag_line svg {
-  width: 20px;
-  height: 20px;
+  width: 16px;
+  height: 16px;
   fill: #fff;
 }
 
