--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -548,12 +548,12 @@
 
 .tag_official {
   margin: 0 10px 0 0;
-  height: 30px;
-  line-height: 30px;
-  padding: 0 14px 0 34px;
+  height: 24px;
+  line-height: 24px;
+  padding: 0 10px 0 30px;
   color: #fff;
   background-color: red;
-  font-size: 1.4rem;
+  font-size: 1rem;
   text-align: right;
   position: relative;
   border-radius: 5px;
@@ -564,14 +564,14 @@
   content: '';
   position: absolute;
   top: 4px;
-  left: 10px;
+  left: 4px;
   width: 20px;
   height: 20px;
   color: #fff;
 }
 .tag_official svg {
-  width: 20px;
-  height: 20px;
+  width: 16px;
+  height: 16px;
   fill: #fff;
 }
 
@@ -659,4 +659,11 @@
   transition: all 0.3s;
   visibility: hidden;
   visibility: visible;
+}
+
+.select_sort {
+  width: 100%;
+  padding: 0 20px 10px 20px;
+  text-align: right;
+  font-size: 1.4rem;
 }
