--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -661,9 +661,30 @@
   visibility: visible;
 }
 
-.select_sort {
+.sort_container {
   width: 100%;
-  padding: 0 20px 10px 20px;
+  height: 30px;
+  padding: 0 20px 0 20px;
   text-align: right;
   font-size: 1.4rem;
+}
+
+.sort_nomal {
+  color: #68a9cf;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.sort_nomal_active {
+  font-weight: bold;
+}
+
+.sort_buy {
+  color: #68a9cf;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.sort_buy_active {
+  font-weight: bold;
 }
