--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -665,7 +665,7 @@
   width: 100%;
   height: 30px;
   padding: 0 20px 0 20px;
-  text-align: right;
+  text-align: left;
   font-size: 1.4rem;
 }
 
