--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -8,5 +8,6 @@
   max-width: 800px;
   min-width: 320px;
   margin: auto;
-  background-color: #faf9f7;
+  /* background-color: #faf9f7; */
+  background-color: #fff;
 }
