--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,10 +4,12 @@ body {
   margin: 30px 0 0 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #faf9f7;
+  /* background-color: #faf9f7; */
+  background-color: #fff;
   text-align: center;
   font-size: 62.5%;
   min-width: 320px;
+  color: #666;
 }
 
 a {
