--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -1,14 +1,21 @@
+.main {
+  max-width: 800px;
+  min-width: 320px;
+  margin: 80px auto;
+  padding: 10px 0;
+  background-color: #fff;
+}
+
 .total_bar_container {
   width: 100%;
-  max-width: 800px;
   height: 40px;
   padding: 0;
   border: 0 0 1px 0 solid #ebe8e4;
-  box-shadow: 0 0 0.3125rem 0 rgb(20 12 0 / 20%);
   position: fixed;
   top: 60px;
-  background-color: #333;
+  background-color: #000;
   z-index: 1;
+  opacity: 0.7;
 }
 
 .total_bar {
@@ -150,14 +157,6 @@
   font-size: 20px;
   color: #fff;
   font-family: sans-serif;
-}
-
-.main {
-  max-width: 800px;
-  min-width: 320px;
-  margin: auto;
-  padding: 10px 0;
-  background-color: #fff;
 }
 
 .event_title_container {
