--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,10 +1,17 @@
+.main {
+  max-width: 800px;
+  min-width: 320px;
+  margin: 80px auto;
+  background-color: #fff;
+}
+
 .title {
-  margin: 60px 0 10px 0;
+  margin: 20px 0 10px 0;
   line-height: 1.15;
   font-size: 5rem;
   font-family: 'Montserrat', sans-serif;
   text-align: center;
-  color: #666;
+  color: #000;
 }
 
 .title span {
@@ -14,7 +21,7 @@
 .sub_title {
   margin: 0 0 30px 0;
   font-size: 1.5rem;
-  color: #666;
+  color: #000;
 }
 
 .grid {
@@ -138,6 +145,7 @@
   background-color: #fff;
   transition: all 0.3s;
   cursor: pointer;
+  margin: 0 0 40px 0;
 }
 .search:focus {
   outline: none;
