--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,7 @@
 html,
 body {
   padding: 0;
-  margin: 30px 0 0 0;
+  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   /* background-color: #faf9f7; */
@@ -9,7 +9,7 @@ body {
   text-align: center;
   font-size: 62.5%;
   min-width: 320px;
-  color: #666;
+  color: #000;
 }
 
 a {
