--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -10,10 +10,18 @@
   width: 100%;
   height: 40px;
   padding: 0;
-  border: 0 0 1px 0 solid #ebe8e4;
-  position: fixed;
-  top: 60px;
   background-color: #000;
+  z-index: 1;
+  opacity: 0.7;
+}
+
+.total_bar_container_fixed {
+  width: 100%;
+  height: 40px;
+  padding: 0;
+  background-color: #000;
+  position: fixed;
+  top: 0;
   z-index: 1;
   opacity: 0.7;
 }
