--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #eee;
+  background-color: #c8e5f6;
 }
 
 .footer {
