--- a/src/styles/ScrollButton.module.css
+++ b/src/styles/ScrollButton.module.css
@@ -4,7 +4,7 @@
   position: fixed;
   left: 20px;
   bottom: 20px;
-  background-color: #335366;
+  background-color: #68a9cf;
   color: #fff;
   margin: 0;
   border-radius: 60px;
@@ -17,7 +17,7 @@
   position: fixed;
   left: 20px;
   bottom: 20px;
-  background-color: #335366;
+  background-color: #68a9cf;
   color: #fff;
   margin: 0;
   border-radius: 60px;
