--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -5,14 +5,14 @@
   z-index: 2;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.2);
   opacity: 0;
   visibility: hidden;
-  transition: 0.3s linear;
-  transform: scale(0.2);
+  transition: 0.2s linear;
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: default;
 }
 
 .overlay_active {
@@ -22,22 +22,115 @@
   z-index: 2;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.2);
   opacity: 1;
   visibility: visible;
-  transition: 0.3s linear;
-  transform: scale(1);
+  transition: 0.2s linear;
   cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: default;
 }
 
 .modal_container {
+  opacity: 0;
+  visibility: hidden;
+  transform: scale(0.5);
+  transition: 0.2s linear;
   min-width: 300px;
   max-width: 400px;
-  height: 400px;
+  width: 100%;
+  margin: 20px;
   background-color: #fff;
-  padding: 20px;
+  padding: 15px;
   border-radius: 10px;
+  cursor: default;
+}
+
+.modal_container_active {
+  opacity: 1;
+  visibility: visible;
+  transform: scale(1);
+  transition: 0.2s linear;
+  min-width: 300px;
+  max-width: 400px;
+  width: 100%;
+  margin: 20px;
+  background-color: #fff;
+  padding: 15px;
+  border-radius: 10px;
+}
+
+.close_button_container {
+  width: 100%;
+  margin: 0 0 20px 0;
+  text-align: right;
+  height: 20px;
+  display: flex;
+  justify-content: flex-end;
+}
+.close_button {
+  display: block;
+  width: 20px; /*枠の大きさ*/
+  height: 20px; /*枠の大きさ*/
+  position: relative;
+  cursor: pointer;
+}
+
+.close_button::before,
+.close_button::after {
+  content: '';
+  display: block;
+  width: 18px; /*バツ線の長さ*/
+  height: 2px; /*バツ線の太さ*/
+  background: #999;
+  transform: rotate(45deg);
+  transform-origin: 0% 50%;
+  position: absolute;
+  top: 2px;
+  left: 20%;
+  cursor: pointer;
+}
+
+.close_button::after {
+  transform: rotate(-45deg);
+  transform-origin: 100% 50%;
+  left: auto;
+  right: 20%;
+  cursor: pointer;
+}
+
+.modal_content_container {
+  width: 100%;
+}
+
+.title {
+  width: 100%;
+  height: 20px;
+  margin: 0;
+  font-size: 1.4rem;
+  font-weight: bold;
+}
+
+.text {
+  width: 100%;
+  margin: 30px 0;
+  font-size: 1.2rem;
+  color: #666;
+}
+
+.button {
+  margin: 0 0 20px 0;
+  width: 270px;
+  height: 40px;
+  background-color: #68a9cf;
+  border-radius: 10px;
+  border: 0;
+  font-size: 1.4rem;
+  font-weight: bold;
+  color: #fff;
+  letter-spacing: 10px;
+  text-align: center;
+  cursor: pointer;
 }
