--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -101,13 +101,12 @@
   cursor: pointer;
 }
 
-.modal_content_container {
+.modal_content {
   width: 100%;
 }
 
 .title {
   width: 100%;
-  height: 20px;
   margin: 0;
   font-size: 1.6rem;
   font-weight: bold;
@@ -118,6 +117,7 @@
   margin: 30px 0;
   font-size: 1.4rem;
   color: #666;
+  text-align: left;
 }
 
 .button {
