--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -604,7 +604,7 @@
   text-align: right;
   position: relative;
   border-radius: 5px;
-  background-color: #1dcd00;
+  background-color: #06c755;
 }
 
 .tag_line span {
