--- a/src/styles/Navber.module.css
+++ b/src/styles/Navber.module.css
@@ -36,7 +36,7 @@
   color: #68a9cf;
 }
 
-.login_sign_up_container {
+.login_button {
   margin: 0 20px 0 0;
   padding: 0 20px;
   height: 30px;
@@ -44,53 +44,5 @@
   background-color: #68a9cf;
   color: #fff;
   border-radius: 30px;
-}
-.login {
-  width: 60px;
-  font-size: 1rem;
-  height: 60px;
-  text-align: center;
-  padding: 36px 0 0 0;
-  position: relative;
   cursor: pointer;
-}
-
-.login span {
-  display: block;
-  content: '';
-  position: absolute;
-  top: 5px;
-  left: 13px;
-  width: 20px;
-  height: 20px;
-}
-.login svg {
-  width: 30px;
-  height: 30px;
-  fill: #000;
-}
-
-.sign_up {
-  width: 60px;
-  font-size: 1rem;
-  height: 60px;
-  text-align: center;
-  padding: 36px 0 0 0;
-  position: relative;
-  cursor: pointer;
-}
-
-.sign_up span {
-  display: block;
-  content: '';
-  position: absolute;
-  top: 5px;
-  left: 13px;
-  width: 20px;
-  height: 20px;
-}
-.sign_up svg {
-  width: 30px;
-  height: 30px;
-  fill: #000;
 }
