--- a/src/styles/Search.module.css
+++ b/src/styles/Search.module.css
@@ -1,3 +1,11 @@
+.main {
+  max-width: 800px;
+  min-width: 320px;
+  margin: 0 auto 40px auto;
+  padding: 10px 0;
+  background-color: #fff;
+}
+
 .card {
   margin: 0 10px 20px 10px;
   padding: 5px 10px;
