--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -216,9 +216,19 @@
   margin: 0 0 20px 0;
   padding: 0 0 0 50px;
   width: 100%;
+  height: 50px;
+  min-width: 280px;
+  max-width: 500px;
+  border-radius: 10px;
+}
+/* .input_mail,
+.input_password {
+  margin: 0 0 20px 0;
+  padding: 0 0 0 50px;
+  width: 100%;
   height: 40px;
   min-width: 280px;
   max-width: 500px;
   border-radius: 5px;
   border: 1px solid #999;
-}
+} */
