--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -7,21 +7,10 @@
 }
 
 .content_title {
-  margin: 0 0 60px 0;
-  font-size: 24px;
+  margin: 0;
+  font-size: 18px;
   position: relative;
   text-align: center;
-}
-
-.content_title span:before {
-  position: absolute;
-  bottom: -20px;
-  left: calc(50% - 30px);
-  width: 60px;
-  height: 5px;
-  content: '';
-  border-radius: 3px;
-  background: #68a9cf;
 }
 
 .card {
@@ -36,6 +25,7 @@
   max-width: 850px;
   background-color: #fff;
   transition: all 0.3s;
+  overflow-x: hidden;
 }
 
 .select_login_container {
@@ -51,7 +41,7 @@
   width: 50%;
   border: none;
   background-color: #fff;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   color: #cf6775;
   font-weight: bold;
   cursor: pointer;
@@ -65,7 +55,7 @@
   width: 50%;
   border: none;
   background-color: #fff;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   color: #666;
   font-weight: bold;
   cursor: pointer;
@@ -121,13 +111,94 @@
   height: 30px;
   fill: #000;
 }
-.form_container {
+
+.login_container,
+.login_container_active {
   display: inline-block;
   width: 100%;
   min-width: 280px;
   max-width: 500px;
-  margin: 40px 0 0 0;
-  padding: 0 10px;
+  margin: 0;
+  position: relative;
+  top: 0;
+  transition: all 0.3s;
+}
+.login_container {
+  left: 100%;
+}
+.login_container_active {
+  left: 0;
+}
+
+.signup_container,
+.signup_container_active {
+  display: inline-block;
+  width: 100%;
+  min-width: 280px;
+  max-width: 500px;
+  margin: 0;
+  position: relative;
+  top: 0;
+  transition: all 0.3s;
+}
+.signup_container {
+  left: -100%;
+}
+.signup_container_active {
+  left: 0;
+}
+
+.form_header {
+  display: flex;
+  align-items: center;
+  font-size: 1.4rem;
+  margin: 20px 0;
+  color: #666;
+}
+
+.form_header:before,
+.form_header:after {
+  content: '';
+  height: 1px;
+  flex-grow: 1;
+  background-color: #999;
+}
+
+.form_header:before {
+  margin-right: 1rem;
+}
+
+.form_header:after {
+  margin-left: 1rem;
+}
+
+.form_container_sns,
+.form_container_mail {
+  width: 200%;
+  margin: 0 0 20px 0;
+  min-width: 560px;
+  max-width: 1000px;
+  position: relative;
+  top: 0;
+  display: flex;
+  justify-self: start;
+  transition: all 0.3s;
+}
+
+.form_container_sns {
+  left: -100%;
+}
+
+.form_container_mail {
+  left: 0%;
+}
+
+.form_login_sns,
+.form_login_mail {
+  width: 50%;
+  min-width: 280px;
+  max-width: 500px;
+  margin: 0;
   text-align: center;
 }
 
@@ -145,8 +216,8 @@
 .btn_login_mail {
   margin: 0 0 20px 0;
   width: 100%;
-  height: 50px;
-  line-height: 50px;
+  height: 40px;
+  line-height: 40px;
   position: relative;
   border: none;
   border-radius: 10px;
@@ -163,15 +234,15 @@
   display: block;
   content: '';
   position: absolute;
-  top: 8px;
-  left: 18px;
+  top: 5px;
+  left: 15px;
   width: 20px;
   height: 20px;
   color: #fff;
 }
 .btn_login_twitter svg {
-  width: 28px;
-  height: 28px;
+  width: 20px;
+  height: 20px;
   fill: #fff;
 }
 
@@ -183,15 +254,15 @@
   display: block;
   content: '';
   position: absolute;
-  top: 8px;
-  left: 18px;
+  top: 5px;
+  left: 15px;
   width: 20px;
   height: 20px;
   color: #fff;
 }
 .btn_login_line svg {
-  width: 28px;
-  height: 28px;
+  width: 20px;
+  height: 20px;
   fill: #fff;
 }
 
@@ -200,7 +271,7 @@
   margin: 0 0 20px 0;
   padding: 0;
   width: 100%;
-  height: 50px;
+  height: 40px;
   position: relative;
   border: none;
   border-radius: 10px;
@@ -215,8 +286,8 @@
   display: block;
   content: '';
   position: absolute;
-  top: 8px;
-  left: 18px;
+  top: 5px;
+  left: 15px;
   width: 20px;
   height: 20px;
   color: #fff;
@@ -230,8 +301,8 @@
   display: block;
   content: '';
   position: absolute;
-  top: 8px;
-  left: 16px;
+  top: 5px;
+  left: 15px;
   width: 20px;
   height: 20px;
   color: #fff;
@@ -245,15 +316,15 @@
   display: block;
   content: '';
   position: absolute;
-  top: 8px;
-  left: 18px;
+  top: 5px;
+  left: 15px;
   width: 20px;
   height: 20px;
   color: #fff;
 }
 .btn_login_mail svg {
-  width: 28px;
-  height: 28px;
+  width: 20px;
+  height: 20px;
   fill: #fff;
 }
 
@@ -271,7 +342,7 @@
   margin: 0;
   position: relative;
   width: 100%;
-  height: 50px;
+  height: 40px;
   text-align: right;
 }
 
@@ -280,8 +351,8 @@
   display: block;
   content: '';
   position: absolute;
-  top: 14px;
-  left: 18px;
+  top: 10px;
+  left: 15px;
   width: 20px;
   height: 20px;
   color: #fff;
@@ -298,7 +369,7 @@
   margin: 0;
   padding: 0 0 0 50px;
   width: 100%;
-  height: 50px;
+  height: 40px;
   border-radius: 10px;
 }
 
@@ -321,7 +392,7 @@
   position: relative;
   min-width: 200px;
   width: 100%;
-  height: 50px;
+  height: 40px;
 }
 
 .input_label {
@@ -447,8 +518,8 @@
 .btn_singup_active {
   margin: 0 0 20px 0;
   width: 100%;
-  height: 50px;
-  line-height: 50px;
+  height: 40px;
+  line-height: 40px;
   position: relative;
   border: none;
   border-radius: 10px;
@@ -498,4 +569,16 @@
   margin: 40px 0 0 0;
   font-size: 1.4rem;
   color: #666;
+}
+
+.btn_link_register {
+  margin: 10px 0 0 0;
+  width: 100%;
+  height: 40px;
+  font-size: 1.4rem;
+  color: #fff;
+  background-color: #f2c746;
+  border-radius: 40px;
+  border: #f2c746 1px solid;
+  cursor: pointer;
 }
