--- a/src/styles/Navber.module.css
+++ b/src/styles/Navber.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   margin: 0;
   background-color: #fff;
-  border-bottom: #ccc 1px solid;
+  border-bottom: #e6e6e6 1px solid;
 }
 
 .header {
